[package]
name = "tibet-dgx"
version = "0.2.0"
edition = "2021"
description = "Zero-Trust DGX — Run LLMs across machines without NVLink. QUIC multi-stream + encrypted RAID-0 + DIME aperture."
license = "MIT"
authors = ["Jasper van de Meent <jasper@humotica.com>", "Root AI <root_idd@humotica.nl>"]
keywords = ["llm", "cross-machine", "ai-inference", "dgx", "gpu-free"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/Humotica/tibet-dgx"
homepage = "https://ainternet.org"
readme = "README.md"

[[bin]]
name = "tibet-dgx"
path = "src/main.rs"

[features]
default = ["quic"]
quic = ["tibet-trust-kernel/quic"]

[dependencies]
tibet-trust-kernel = { version = "1.0.0-alpha.3", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }
